tests/expectations/compiler/function/unit_parameter_fail.out
Error [ETYC0372123]: The unit type () may appear only as the return type of a function.
    --> compiler-test:4:9
     |
   4 |         x: (),
     |         ^^^^^
Error [ETYC0372123]: The unit type () may appear only as the return type of a function.
    --> compiler-test:8:21
     |
   8 |     transition main(x: ()) {}
     |                     ^^^^^
Error [ETYC0372123]: The unit type () may appear only as the return type of a function.
    --> compiler-test:10:22
     |
  10 |     transition other(x: [(); 2]) {}
     |                      ^^^^^^^^^^
Error [ETYC0372123]: The unit type () may appear only as the return type of a function.
    --> compiler-test:12:33
     |
  12 |     transition yet_another() -> [(); 2] {}
     |                                 ^^^^^^^
Error [ETYC0372036]: Function must return a value.
    --> compiler-test:12:5
     |
  12 |     transition yet_another() -> [(); 2] {}
     |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
